<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorDarkGray"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_simple_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textColor="@color/colorWhite"
        android:text="@string/add_day"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_simple_dialog_title"
        android:layout_marginBottom="4dp"
        android:background="@color/colorWhite" />

    <Spinner
        android:id="@+id/dropdown_select_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:backgroundTint="@color/colorWhite"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/checkboxs"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dropdown_select_day"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkbox_light_activated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/light_activated"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorLightBlue"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkbox_play_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/play_sound"
            android:textColor="@color/colorLightBlue"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkbox_blinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/open_blinds"
            android:textColor="@color/colorLightBlue"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkbox_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/open_window"
            android:textColor="@color/colorLightBlue"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/checkboxs"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp">
        <Button
            android:id="@+id/btn_add_day_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorRed"/>
        <Button
            android:id="@+id/btn_add_day_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/add"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorGreen"/>
    </RelativeLayout>

</RelativeLayout>