<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connect.ConnectActivity"
    android:background="@color/colorSkyBlue"
    android:layout_marginTop="-75dp">

    <TextView
        android:id="@+id/textView"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_centerInParent="true"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPaleYellow" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnected"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        style="@style/Base.TextAppearance.AppCompat.Body1"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_connect"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="8dp"
        android:textAlignment="center"
        android:layout_marginTop="24dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sun" android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-225dp"
        android:layout_marginBottom="-225dp"/>
</RelativeLayout>