<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardBackgroundColor="@color/colorDarkerGray"
    app:cardCornerRadius="1dp"
    android:id="@+id/layout_day_base"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Monday"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_centerVertical="true"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btn_delete_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorDarkerGray"
                android:padding="8dp"
                android:src="@drawable/ic_delete_forever_red_32dp" />

        </RelativeLayout>

        <View
            android:id="@+id/line"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightBlue" />

        <TextView
            android:id="@+id/text_wakeup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/wake_up_naturally"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:id="@+id/layout_features"
            android:layout_below="@id/text_wakeup"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_centerHorizontal="true">

            <CheckBox
                android:id="@+id/checkbox_light_activated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/light_activated"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorLightBlue"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkbox_play_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/play_sound"
                android:textColor="@color/colorLightBlue"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkbox_blinds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/open_blinds"
                android:textColor="@color/colorLightBlue"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkbox_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/open_window"
                android:textColor="@color/colorLightBlue"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>